--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="box">
         <h1 class="box__">Далеко-далеко за горами в стране.</h1>
-        <div class="box__"></div>
+        <div class="box__">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti doloribus expedita, porro laudantium optio error aut aliquid enim saepe a soluta, vero ipsa dignissimos eum. Corrupti harum ducimus totam itaque.</div>
         <div class="box__"></div>
     </div>
 </body>
